CAMEL-21710 camel-jbang-plugin-kubernetes - automatic cluster detection
Set parameters when connected to specific cluster

(cherry picked from commit e63c90106e394af22d6c17a655e04dd4f780fbd4)